# Melissa

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
Installer/Windows/: MelissaInstaller.iss  copy_exe.bat
Installer/macOS/: .gitignore  Distribution.xml  Melissa_Installer.plist  installer_settings.py
Installer/macOS_Lite/: Distribution.xml  Melissa_Installer.plist  Melissa_Lite_Installer.plist  entitlements.plist
Melissa/: Melissa.jucer  Melissa_Lite.jucer
Melissa/Builds/MacOSX/: Icon.icns  Info-App.plist
Melissa/Builds/MacOSX/Melissa.xcodeproj/: project.pbxproj
Melissa/Builds_Lite/MacOSX/: Info-App.plist
Melissa/Builds_Lite/MacOSX/Melissa Lite.xcodeproj/: project.pbxproj
Melissa/Builds_Lite/VisualStudio2019/: Melissa Lite.sln  Melissa Lite_App.vcxproj  Melissa Lite_App.vcxproj.filters  resources.rc
Melissa/Builds_Lite/iOS/: Icon.icns  Info-App.plist
Melissa/Builds_Lite/iOS/Melissa Lite.xcodeproj/: project.pbxproj
Melissa/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  BinaryData2.cpp  JuceHeader.h
Melissa/Resource/Language/: en-US.txt  ja-JP.txt
Melissa/Source/: Main.cpp  MainComponent.cpp  MainComponent.h  MelissaAboutComponent.h  MelissaBottomControlComponent.cpp  MelissaBottomControlComponent.h  MelissaButtons.h  MelissaColourScheme.h  MelissaCommand.cpp  MelissaCommand.h  MelissaControlComponent.h  MelissaDataSource.cpp  MelissaDataSource.h  MelissaDebugComponent.h  MelissaDefinitions.cpp  MelissaDefinitions.h  MelissaFileListBox.h  MelissaHost.h  MelissaIncDecButton.h  MelissaInputDialog.h  MelissaLabel.h  MelissaLookAndFeel.h  MelissaMIDIControlManager.cpp  MelissaMIDIControlManager.h  MelissaModalDialog.cpp  MelissaModalDialog.h  MelissaModel.cpp  MelissaModel.h  MelissaModelListener.h  MelissaOkCancelDialog.h  MelissaPlayPauseButton.h  MelissaPlaylistComponent.cpp  MelissaPlaylistComponent.h  MelissaPracticeTableListBox.cpp  MelissaPreferencesComponent.cpp  MelissaPreferencesComponent.h  MelissaScrollLabel.h  MelissaSetListComponent.cpp  MelissaSetListComponent.h  MelissaShortcutManager.cpp  (+14 more)
Melissa/Source/Audio/: MelissaAudioEngine.cpp  MelissaAudioEngine.h  MelissaBPMDetector.cpp  MelissaBPMDetector.h  MelissaMetronome.cpp  MelissaMetronome.h
Melissa/Source/Audio/soundtouch/: BPMDetect_for_Melissa.cpp  BPMDetect_for_Melissa.h
Melissa/Source/AudioLib/: Melissa.cpp  Melissa.h
Melissa/Source/UI/: MelissaAboutComponent.h  MelissaBPMSettingComponent.h  MelissaBottomControlComponent.cpp  MelissaBottomControlComponent.h  MelissaButtons.h  MelissaCommandComboBox.cpp  MelissaCommandComboBox.h  MelissaDoubleClickEditLabel.h  MelissaFileListBox.h  MelissaIncDecButton.h  MelissaInputDialog.h  MelissaLabel.h  MelissaLookAndFeel.h  MelissaLoopRangeComponent.cpp  MelissaLoopRangeComponent.h  MelissaMarkerListBox.cpp  MelissaMarkerListBox.h  MelissaMarkerListener.h  MelissaMarkerMemoComponent.cpp  MelissaMarkerMemoComponent.h  MelissaMessageComponent.cpp  MelissaMessageComponent.h  MelissaModalDialog.cpp  MelissaModalDialog.h  MelissaOkCancelDialog.h  MelissaOptionDialog.h  MelissaPlaylistComponent.cpp  MelissaPlaylistComponent.h  MelissaPopupMessageComponent.cpp  MelissaPopupMessageComponent.h  MelissaPracticeTableListBox.cpp  MelissaPracticeTableListBox.h  MelissaPreferencesComponent.cpp  MelissaPreferencesComponent.h  MelissaScrollLabel.h  MelissaSectionComponent.cpp  MelissaShortcutComponent.cpp  MelissaShortcutComponent.h  MelissaShortcutPopupComponent.cpp  MelissaShortcutPopupComponent.h  (+19 more)
Melissa_Lite/: Melissa_Lite.jucer
Melissa_Lite/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Resource/: index.html
Resource/Language/: en-US.txt  ja-JP.txt
Source/: AdMobAdDelegateViewController.h  AdMobAdDelegateViewController.m  Main.cpp  MainComponent.cpp  MainComponent.h  MelissaAd.h  MelissaAd.mm  MelissaCommand.cpp  MelissaCommand.h  MelissaDataSource.cpp  MelissaDataSource.h  MelissaDefinitions.h  MelissaExportManager.cpp  MelissaExportManager.h  MelissaExporter.cpp  MelissaExporter.h  MelissaHost.h  MelissaMobileSupport.h  MelissaMobileSupport.mm  MelissaModel.cpp  MelissaModel.h  MelissaModelListener.h  MelissaShortcutManager.cpp  MelissaShortcutManager.h  MelissaStemProvider.cpp  MelissaStemProvider.h  MelissaUpdateChecker.cpp  MelissaUpdateChecker.h  MelissaUtility.h
Source/Audio/: MelissaAudioEngine.cpp  MelissaAudioEngine.h  MelissaBPMDetector.cpp  MelissaBPMDetector.h  MelissaBeepGenerator.cpp  MelissaBeepGenerator.h  MelissaMetronome.cpp  MelissaMetronome.h
Source/Audio/soundtouch/: BPMDetect_for_Melissa.cpp  BPMDetect_for_Melissa.h
Source/UI/: MelissaAboutComponent.h  MelissaBPMSettingComponent.h  MelissaBrowserComponent.cpp  MelissaBrowserComponent.h  MelissaButtons.h  MelissaCommandComboBox.cpp  MelissaCommandComboBox.h  MelissaDoubleClickEditLabel.h  MelissaExportComponent.cpp  MelissaExportComponent.h  MelissaFileListBox.h  MelissaIconTextComponent.h  MelissaIncDecButton.h  MelissaInputDialog.h  MelissaLabel.h  MelissaLookAndFeel.h  MelissaLoopRangeComponent.cpp  MelissaLoopRangeComponent.h  MelissaMarkerListBox.cpp  MelissaMarkerListBox.h  MelissaMarkerMemoComponent.cpp  MelissaMarkerMemoComponent.h  MelissaMobileFileListBox.h  MelissaMobileMenuComponent.cpp  MelissaMobileMenuComponent.h  MelissaModalDialog.cpp  MelissaModalDialog.h  MelissaOptionDialog.h  MelissaPlaylistComponent.cpp  MelissaPlaylistComponent.h  MelissaPopupMessageComponent.cpp  MelissaPopupMessageComponent.h  MelissaPracticeTableListBox.cpp  MelissaPracticeTableListBox.h  MelissaPreCountSettingComponent.h  MelissaProgressBarComponent.h  MelissaScrollLabel.h  MelissaSectionComponent.cpp  MelissaSectionComponent.h  MelissaSeparatorComponent.h  (+21 more)
Source/UI/WebView/: SinglePageBrowser.cpp  SinglePageBrowser.h  WebViewBackendComponent.cpp  WebViewBackendComponent.h
docs/: index.html  index_en.html  readme.txt  styles.html
docs/css/: base.css  main.css  my.css  vendor.css
docs/css/micons/: micons.css
docs/js/: main.js  plugins.js
(+23 files in other folders)
